fixed the alignment issues in customer summary

--- a/dashboard.css
+++ b/dashboard.css
@@ -536,6 +536,7 @@ td {
 }
 .charge-container {
   align-self: center;
+  padding-bottom: 1rem;
 }
 .charge-input:focus,
 .charge-input:active {
@@ -683,4 +684,8 @@ td {
 .discount-section.show-inputs .add-disc-btn,
 .discount-section.discount-present .add-disc-btn {
   display: none;
+}
+
+.booking-card .spaced-row {
+  align-items: flex-start;
 }
